# src/libs/AssemblyAI/Generated/AssemblyAI.Models.ContentSafetyLabelsResult.g.cs
@@ -15,29 +15,25 @@ namespace AssemblyAI
         /// </summary>
         [global::System.Text.Json.Serialization.JsonPropertyName("status")]
         [global::System.Text.Json.Serialization.JsonConverter(typeof(global::AssemblyAI.JsonConverters.AudioIntelligenceModelStatusJsonConverter))]
-        [global::System.Text.Json.Serialization.JsonRequired]
-        public required global::AssemblyAI.AudioIntelligenceModelStatus Status { get; set; }
+        public global::AssemblyAI.AudioIntelligenceModelStatus? Status { get; set; }
 
         /// <summary>
         /// An array of results for the Content Moderation model
         /// </summary>
         [global::System.Text.Json.Serialization.JsonPropertyName("results")]
-        [global::System.Text.Json.Serialization.JsonRequired]
-        public required global::System.Collections.Generic.IList<global::AssemblyAI.ContentSafetyLabelResult> Results { get; set; }
+        public global::System.Collections.Generic.IList<global::AssemblyAI.ContentSafetyLabelResult>? Results { get; set; }
 
         /// <summary>
         /// A summary of the Content Moderation confidence results for the entire audio file
         /// </summary>
         [global::System.Text.Json.Serialization.JsonPropertyName("summary")]
-        [global::System.Text.Json.Serialization.JsonRequired]
-        public required global::System.Collections.Generic.Dictionary<string, double> Summary { get; set; }
+        public global::System.Collections.Generic.Dictionary<string, double>? Summary { get; set; }
 
         /// <summary>
         /// A summary of the Content Moderation severity results for the entire audio file
         /// </summary>
         [global::System.Text.Json.Serialization.JsonPropertyName("severity_score_summary")]
-        [global::System.Text.Json.Serialization.JsonRequired]
-        public required global::System.Collections.Generic.Dictionary<string, global::AssemblyAI.SeverityScoreSummary> SeverityScoreSummary { get; set; }
+        public global::System.Collections.Generic.Dictionary<string, global::AssemblyAI.SeverityScoreSummary>? SeverityScoreSummary { get; set; }
 
         /// <summary>
         /// Additional properties that are not explicitly defined in the schema
@@ -64,15 +60,15 @@ namespace AssemblyAI
         [global::System.Diagnostics.CodeAnalysis.SetsRequiredMembers]
 #endif
         public ContentSafetyLabelsResult(
-            global::AssemblyAI.AudioIntelligenceModelStatus status,
-            global::System.Collections.Generic.IList<global::AssemblyAI.ContentSafetyLabelResult> results,
-            global::System.Collections.Generic.Dictionary<string, double> summary,
-            global::System.Collections.Generic.Dictionary<string, global::AssemblyAI.SeverityScoreSummary> severityScoreSummary)
+            global::AssemblyAI.AudioIntelligenceModelStatus? status,
+            global::System.Collections.Generic.IList<global::AssemblyAI.ContentSafetyLabelResult>? results,
+            global::System.Collections.Generic.Dictionary<string, double>? summary,
+            global::System.Collections.Generic.Dictionary<string, global::AssemblyAI.SeverityScoreSummary>? severityScoreSummary)
         {
             this.Status = status;
-            this.Results = results ?? throw new global::System.ArgumentNullException(nameof(results));
-            this.Summary = summary ?? throw new global::System.ArgumentNullException(nameof(summary));
-            this.SeverityScoreSummary = severityScoreSummary ?? throw new global::System.ArgumentNullException(nameof(severityScoreSummary));
+            this.Results = results;
+            this.Summary = summary;
+            this.SeverityScoreSummary = severityScoreSummary;
         }
 
         /// <summary>
